# Drago-s-Vrchat-Moderation-Tool

Drago's Moderation tool v0.1.0/: DISCLAIMER.md  DISCLAIMER.txt  LICENSE  README.md  install_deps.bat  install_on_desktop.bat  moderation_tool_settings.example.json  pyproject.toml  requirements.txt  run_tool.bat  scan_duplicate_assets.bat
Drago's Moderation tool v0.1.0/src/kryzln_vrc_logger/: config.py  engine.py  gui.py  log_parser.py  logger.py  player_registry.py  printing.py  resolution.py  risk_engine.py  stability_monitor.py  webhook.py
Drago's Moderation tool v0.1.0/tests/: test_config.py  test_log_parser.py  test_stability_monitor.py
