[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dragos-moderation-tool"
version = "0.1.0"
description = "VRChat moderation and stability monitoring tool"
requires-python = ">=3.10"
dependencies = [
  "psutil",
  "requests",
  "Pillow",
]

[project.scripts]
dragos-moderation-tool = "kryzln_vrc_logger.logger:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
